r12 (2015-06-24)
  * Move to GitHub.
  * Change revision numbering due to GitHub.
  * Better Raspberry Pi support via VideoCore / EGL specifics.
  * Better control of symbol visibility.
  * Display alignment adjustments in a less floody fashion.
  * Allow autodetection of required libraries from symbols used.
  * Improve CMake configuration, support automatic MSVS project generation.
  * Python style fixes.

r11 (2015-02-11)
  * Raspberry Pi (Linux-armel) support.
  * Bugfixes (works on Python 3 again).

r10 (2015-02-04)
  * Use 'unsafe' DT_SYMTAB / DT_HASH location assumption from minas/Calodox.
  * Only treat d_un pointers as offsets on FreeBSD.
  * Make hashed symbol table order stable, decreases compressed size.
  * Fix bugs that had crept into legacy compilation modes.
  * Minor Python style improvements.

r9 (2015-02-03)
  * Default to debugger trap for terminating to save some space.
  * Use fixed r_debug address trick from minas/Calodox.
  * Preliminary support for using elfling by minas/Calodox for two-stage
    compression. Actual elfling source not yet included.
  * Do not create unnecessary .bss fields for required UND symbols.
  * Fix errors in entry point crunching.
  * Less offensively bad Python coding conventions.

r8 (2014-09-24)
  * Platform-dependant pick on compression header.
  * Fix byte-by-byte section merging bug.
  * Make quad example simpler and intro example more complex.
  * Default to filedump header that does not look 'nice' to save some space.

r7 (2014-08-17)
  * Support DT_GNU_HASH in addition to DT_HASH on Linux.
  * Add symbol definitions.
  * New bsd_rand from up-to-date FreeBSD.

r6 (2014-06-21)
  * Additional GL function definitions (can now compile flow2).
  * Better handling of GLAPIENTRY.
  * Add NOMINMAX define so windows.h does not clobber std namespace max/min.

r5 (2014-06-06)
  * Allow compiler to assign values for system calls.
  * Better header crunching on 64-bit.

r4 (2014-06-05)